tests/misc/errors/handlebars/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.hbs error test 1`] = `
"Parse error on line 2:
<A >x, {{@name}
--------------^
Expecting 'CLOSE_RAW_BLOCK', 'CLOSE', 'CLOSE_UNESCAPED', 'OPEN_SEXPR', 'CLOSE_SEXPR', 'ID', 'OPEN_BLOCK_PARAMS', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', 'SEP', got 'INVALID' (2:11)
  1 | <A >
> 2 | x, {{@name}
    |           ^
  3 | "
`;

exports[`invalid-2.hbs error test 1`] = `
"Unclosed element \`@name\` (on line 3). (3:0)
  1 | <a>
  2 | 
> 3 | <{@name>
  4 | "
`;

exports[`invalid-3.hbs error test 1`] = `
"Parse error on line 3:
<a>{{}}
-----^
Expecting 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (3:3)
  1 | <a>
  2 | 
> 3 | {{}}
    |   ^
  4 | "
`;
